# detections

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: project.json  pyproject.toml
apps/api/src/api/: coco.py  deps.py  main.py
apps/api/src/api/routers/: classes.py  clips.py  detections.py  frames.py  jobs.py  labeling.py  metrics.py  models.py  settings.py  stream.py  subclasses.py  system.py  tracks.py  training.py
apps/api/src/api/schemas/: class_.py  clip.py  common.py  detection.py  frame.py  job.py  labeling.py  metrics.py  model.py  settings.py  system.py  tracks.py  training.py
apps/api/src/api/services/: audits.py  crops.py  events.py  gallery.py  tracks_service.py  training_service.py
apps/api/src/api/utils/: pagination.py
apps/api/tests/: conftest.py  test_bulk_review_tracks.py  test_classes.py  test_clips.py  test_detections.py  test_frames.py  test_jobs.py  test_labeling.py  test_metrics.py  test_metrics_tracks.py  test_models.py  test_settings.py  test_smoke_pipeline.py  test_subclasses.py  test_system.py  test_tracks_router.py  test_training.py  test_training_service.py
apps/ingest-watcher/: project.json  pyproject.toml
apps/ingest-watcher/src/watcher/: main.py
apps/ingest-watcher/tests/: test_main.py
apps/web/: eslint.config.js  index.html  package.json  project.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: ClassFormDialog.tsx  ClipUploadList.tsx  DeleteFrameButton.tsx  SubclassFormDialog.tsx
apps/web/src/components/clips/: ClipPlayerModal.tsx
apps/web/src/components/domain/: ClassBadge.tsx
apps/web/src/components/labeling/: ClassPicker.tsx  DetectionCrop.tsx  DetectionList.tsx  DetectionPreview.tsx  DetectionTileGrid.tsx  KeymapModal.tsx  LabelingCanvas.tsx  LabelingTabs.tsx
apps/web/src/components/layout/: AppShell.tsx  PageHeader.tsx  Sidebar.tsx  ThemeToggle.tsx  Topbar.tsx
apps/web/src/components/ui/: InfiniteScrollSentinel.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  status-badge.tsx  tabs.tsx
apps/web/src/hooks/: useBulkLabeling.ts  useClasses.ts  useClips.ts  useDetections.ts  useFrame.ts  useFrames.ts  useLabelingHotkeys.ts  useLabelingQueue.ts  useLiveEvents.ts  useMetrics.ts  useModels.ts  usePaginated.ts  useSettings.ts  useSubclasses.ts  useSystem.ts  useTraining.ts
apps/web/src/lib/: api.ts  apiDetections.ts  bbox.ts  cropStyle.test.ts  cropStyle.ts  format.test.ts  format.ts  query.ts  sse.ts  theme.tsx
apps/web/src/routes/: dashboard.tsx  metrics.tsx  models.tsx  settings.tsx  system.tsx  training.tsx
apps/web/src/routes/classes/: detail.tsx  index.tsx
apps/web/src/routes/clips/: detail.tsx  frame.tsx  index.tsx
apps/web/src/routes/labeling/: clip.tsx  frame.tsx  groups.tsx  index.tsx  quick.tsx  similarity.tsx  track-detail.tsx  tracks.tsx
apps/web/src/stores/: labeling.ts
apps/web/tests/: bbox.test.ts  labelingStore.test.ts
apps/worker/: project.json  pyproject.toml
apps/worker/src/worker/: app.py  crops.py  dataset.py  db.py  events.py  gpu_check.py  models.py  orphans.py  phash.py
apps/worker/src/worker/tasks/: __init__.py  assign_subclass.py  assign_track_subclass.py  backfill_embeddings.py  backfill_tracks.py  compress.py  dedup.py  delete_clip.py  deliver_callback.py  detect.py  detect_and_track.py  embed_object.py  extract.py  finetune_yolo.py  ingest.py  predict_user_detection.py  prune.py  purge.py  recognize_face.py  reextract.py  train_subclass_classifier.py
apps/worker/tests/: conftest.py  test_assign_subclass.py  test_assign_track_subclass.py  test_backfill_tracks.py  test_compress.py  test_dataset.py  test_delete_clip.py  test_deliver_callback.py  test_detect.py  test_detect_and_track.py  test_finetune_yolo.py  test_model_paths.py  test_predict_user_detection.py  test_prune.py  test_purge_frames.py  test_reextract.py  test_train_subclass_classifier.py
docker/: dev-compose.yml  docker-compose.override.yml  docker-compose.yml  server-compose.yml
docker/api/: Dockerfile
docker/watcher/: Dockerfile
docker/web/: Dockerfile  nginx.conf
docker/worker/: Dockerfile
docs/: integration-prompt.md  runbook.md
libs/python/db/: alembic.ini  project.json  pyproject.toml
libs/python/db/alembic/: env.py
libs/python/db/alembic/versions/: 001_initial_schema.py  002_seed_yolo_class_index.py  003_detections_soft_delete.py  004_external_jobs.py  005_training_runs_keyset_index.py  006_tracks.py  007_track_audits.py
libs/python/db/src/vd_db/: __init__.py  base.py  job_result.py  model_paths.py  models.py  registry.py  runtime_settings.py  subclass_knn.py  testing.py  track_helpers.py
libs/python/ml/: project.json  pyproject.toml
libs/python/ml/src/vd_ml/: __init__.py  classifier.py  embeddings.py  faces.py  training.py  unload.py  yolo.py
libs/python/ml/tests/: test_classifier.py  test_faces.py  test_yolo.py
libs/python/settings/: project.json  pyproject.toml
libs/python/settings/src/vd_settings/: __init__.py  settings.py
libs/python/tasks/: project.json  pyproject.toml
libs/python/tasks/src/vd_tasks/: app.py
libs/ts/api-client/: package.json
libs/ts/api-client/src/: index.ts
libs/ts/theme/: package.json
libs/ts/theme/src/: index.ts  preset.ts
libs/ts/ui/: package.json
libs/ts/ui/src/: index.ts
plans/: 00-overview.md  01-monorepo-and-tooling.md  02-infra-and-config.md  03-data-model.md  04-backend-api.md  05-worker-pipeline.md  06-ml-training.md  07-frontend-foundation.md  08-labeling-ui.md  09-milestones.md  deferred.md
specs/: 00-overview.md  01-monorepo-and-tooling.md  02-infra-and-config.md  03-data-model.md  04-backend-api.md  05-worker-pipeline.md  06-ml-training.md  07-frontend-foundation.md  08-labeling-ui.md  09-milestones.md  deferred.md  proposals.md
tools/scripts/: bootstrap.sh  deploy.sh  dev.sh
