[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4",
  "redis>=5.0",
  "vd-settings",
  "vd-db",
  "vd-tasks",
]

[project.optional-dependencies]
gpu = [
  "torch>=2.3",
  "ultralytics>=8.3",
  "insightface>=0.7",
  "onnxruntime-gpu>=1.18",
  "transformers>=4.44",
  "pillow>=10.0",
  "opencv-python-headless>=4.9",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "vd-ml",
]
cpu = [
  "torch>=2.3",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.uv.sources]
vd-settings = { path = "../../libs/python/settings", editable = true }
vd-db = { path = "../../libs/python/db", editable = true }
vd-tasks = { path = "../../libs/python/tasks", editable = true }
vd-ml = { path = "../../libs/python/ml", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
