[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4",
  "redis>=5.0",
  "vd-settings",
  "vd-db",
  "vd-tasks",
]

[project.optional-dependencies]
gpu = [
  "torch>=2.7",
  "torchvision>=0.22",
  "ultralytics>=8.3",
  "insightface>=0.7",
  "onnxruntime-gpu>=1.18",
  "transformers>=4.44",
  "pillow>=10.0",
  "opencv-python-headless>=4.9",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "vd-ml",
]
cpu = [
  "torch>=2.7",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

# The cpu/gpu extras pull torch from different wheel indexes and are never
# installed together — declaring them conflicting lets uv resolve each split.
[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[tool.uv.sources]
vd-settings = { path = "../../libs/python/settings", editable = true }
vd-db = { path = "../../libs/python/db", editable = true }
vd-tasks = { path = "../../libs/python/tasks", editable = true }
vd-ml = { path = "../../libs/python/ml", editable = true }
# Pin torch to the right PyTorch wheel index per extra: CUDA 12.8 builds for
# the `gpu` worker (generic PyPI torch ships no CUDA kernels; cu128 is the
# first index with Blackwell/sm_120 kernels), CPU-only builds for the `cpu`
# worker. Without this the gpu image silently runs on the CPU.
torch = [
  { index = "pytorch-cu128", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
