[project]
name = "vd-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "vd-settings",
]

# The inference models are heavy (torch/CUDA). They are imported lazily by
# vd_ml's submodules, so the package installs light by default; the worker's
# `gpu` extra provides them at runtime. Install `vd-ml[inference]` for
# standalone use.
[project.optional-dependencies]
inference = [
  "ultralytics>=8.3",
  "insightface>=0.7",
  "onnxruntime>=1.18",
  "transformers>=4.44",
  "scikit-learn>=1.4",
  "joblib>=1.3",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv.sources]
vd-settings = { path = "../settings", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vd_ml"]
