[project]
name = "vd-tasks"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4",
  "redis>=5.0",
  "vd-settings",
]

[tool.uv.sources]
vd-settings = { path = "../settings", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vd_tasks"]
